Fixed z-index for header (now mathjax has lower z-index)

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ header {
     text-align: center;
     padding: 5px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 /* Main Content */
